manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flattrackio-site
  namespace: flattrackio-site
  labels:
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flattrackio-site
  template:
    metadata:
      labels:
        app: flattrackio-site
        environment: production
    spec:
      automountServiceAccountToken: false
      containers:
      - name: flattrackio-site-blog
        image: registry.gitlab.com/flattrack/flattrack.io:${APP_VERSION}
        imagePullPolicy: IfNotPresent
        securityContext:
          readOnlyRootFilesystem: true
          runAsUser: 1000
          runAsGroup: 1000
          allowPrivilegeEscalation: false
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 8080
        readinessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 2
          periodSeconds: 10
        resources:
          requests:
            memory: "20Mi"
            cpu: "100m"
          limits:
            memory: "20Mi"
            cpu: "100m"
