manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flattrackio-site
  namespace: flattrackio-site
  labels:
    environment: production
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: flattrackio-site
